2000-08-30  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf.c: Change client to new system (use object
	references to ConfigDatabase instead of the integer context ID).
	
	* gconf/gconf-backend.c: Fix path to uninstalled modules, and 
	put the whole uninstalled modules thing in GCONF_ENABLE_DEBUG 

	* gconf/gconf-database.c: add some missing includes, and fix
	a typo bug

	* gconf/gconfd.c: CORBA_Object_duplicate() the ConfigDatabase
	objrefs before passing them back out to ORBit. Remove
	some bogus assertions.
	
	* TODO: Updates, added notes from Colm

2000-08-30  Havoc Pennington  <hp@pobox.com>

	* gconf/gconfd.c, gconf/gconf-database.h, gconf/gconf-database.c, 
	gconf/gconfd.h: Completed the server-side implementation of 
	the new system where a ConfigServer_Context becomes
	a ConfigDatabase object. Client side doesn't even compile
	yet. Will get it compiling in the morning.

2000-08-29  Havoc Pennington  <hp@redhat.com>

	* gconf/gconfd.c: Add logfile load/save; not really working 
	yet.

	* gconf/gconf.c: Remove reinstall-listeners stuff and implement
	update_listeners() from the server. Most of this is about to get
	removed again when I fix context ID's to be object references
	instead.

	* gconf/gconf-listeners.c: #include <string.h>, 
	store full key name on tree nodes, add connection ID to 
	foreach callback

	* gconf/GConf.idl: Add update_listener method on ConfigListener,
	so the daemon can tell a client that a listener's ID has changed

	* gconf/gconf-glib-public.h, 
	gconf/gconf-glib-private.h,
	gconf/gconf-glib.c: Put in gmarkup.[hc], gunicode stuff, 
	and gerror.[hc] from GLib 2.0. The Unicode char tables are
	causing big bloat; may be able to get rid of them 
	before GNOME 1.4 if we are lucky.

2000-08-27  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-glib-public.h, 
	gconf/gconf-glib-private.h,
	gconf/gconf-glib.c: Place to put cut-and-paste code from 
	GLib 2.0

	* gconf/gconf.c (notify): Only print warnings on bogus notifies